<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2020 The Chromium OS Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/text_view_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="@string/test_keyboard" />

    <EditText
        android:id="@+id/edit_text_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_view_keyboard"
        android:layout_alignBottom="@+id/text_view_keyboard"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/text_view_keyboard"
        android:hint="@string/type_something_here"
        android:inputType="textPersonName"
        android:text="@string/hello" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/edit_text_keyboard"
        android:layout_marginTop="5dp"
        android:text="@string/ok" />

</RelativeLayout>