<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.chromium.arc.testapp.windowmanager.NewActivityFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <TextView
        android:id="@+id/text_view_new_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/options_for_new_activity"
        android:textSize="18sp" />

    <!-- Launch Activity button MUST always be visible to make UI Automator framework happy.
    Moving it at the bottom of the window + sending the "scroll.toEnd()" UI Automator event is not
    enough. The event gets lost sometimes. -->
    <Button
        android:id="@+id/button_launch_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_view_set_bounds"
        android:layout_below="@+id/text_view_new_activity"
        android:layout_marginTop="10dp"
        android:text="@string/launch_activity" />

    <TextView
        android:id="@+id/text_view_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_launch_activity"
        android:layout_marginTop="10dp"
        android:text="@string/orientation" />

    <RadioGroup
        android:id="@+id/radio_group_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_view_orientation"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/text_view_orientation"
        android:checkedButton="@+id/radio_button_portrait">

        <RadioButton
            android:id="@+id/radio_button_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/portrait" />

        <RadioButton
            android:id="@+id/radio_button_landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/landscape" />

        <RadioButton
            android:id="@+id/radio_button_unspecified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/unspecified" />

    </RadioGroup>

    <TextView
        android:id="@+id/text_view_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radio_group_orientation"
        android:layout_marginTop="10dp"
        android:text="@string/options" />

    <CheckBox
        android:id="@+id/check_box_hide_system_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/radio_group_orientation"
        android:layout_alignTop="@+id/text_view_options"
        android:text="@string/immersive" />

    <CheckBox
        android:id="@+id/check_box_root_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/check_box_hide_system_bar"
        android:layout_alignBottom="@+id/check_box_hide_system_bar"
        android:layout_toEndOf="@+id/check_box_hide_system_bar"
        android:text="@string/root_activity" />

    <TextView
        android:id="@+id/text_view_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_view_options"
        android:layout_marginTop="10dp"
        android:text="@string/display" />

    <TextView
        android:id="@+id/text_view_set_display"
        android:clickable="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:background="?android:attr/selectableItemBackground"
        android:layout_alignStart="@+id/check_box_hide_system_bar"
        android:layout_alignTop="@+id/text_view_display"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:text="@string/unspecified" />

    <TextView
        android:id="@+id/text_view_bounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_view_set_display"
        android:layout_marginTop="10dp"
        android:text="@string/bounds" />

    <TextView
        android:id="@+id/text_view_set_bounds"
        android:clickable="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:background="?android:attr/selectableItemBackground"
        android:layout_alignStart="@+id/text_view_set_display"
        android:layout_alignTop="@+id/text_view_bounds"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:text="@string/unspecified" />

</RelativeLayout>

</ScrollView>
